--- a/css/rtl.css
+++ b/css/rtl.css
@@ -4,6 +4,8 @@
 /*  default-theme-for-rtl  */
 .rtl {
   direction: rtl;
+  /* All Things Float Left to Right Here */
+
   /*  default-theme-for-rtl  */
 
 }
