--- a/css/rtl.less
+++ b/css/rtl.less
@@ -2,7 +2,8 @@
 @right: right; @left: left;
 .rtl{
 	direction:rtl;
-	.col-xs-1,.col-xs-2,.col-xs-3,.col-xs-4,.col-xs-5,.col-xs-6,.col-xs-7,.col-xs-8,.col-xs-9,.col-xs-10,.col-xs-11, .col-sm-1,.col-sm-2,.col-sm-3,.col-sm-4,.col-sm-5,.col-sm-6,.col-sm-7,.col-sm-8,.col-sm-9,.col-sm-10,.col-sm-11, .dropdown-menu, .nav-tabs > li, .nav-pills > li, .navbar-brand, .navbar-nav, .navbar-nav > li, .pager .previous > a, .pager .previous > span, .progress-bar, .pagination > li > a, .pagination > li > span, .radio input[type="radio"],.radio-inline input[type="radio"], .checkbox input[type="checkbox"],.checkbox-inline input[type="checkbox"],.fl{float: @right;} 
+/* All Things Float Left to Right Here */
+.col-xs-1,.col-xs-2,.col-xs-3,.col-xs-4,.col-xs-5,.col-xs-6,.col-xs-7,.col-xs-8,.col-xs-9,.col-xs-10,.col-xs-11, .col-sm-1,.col-sm-2,.col-sm-3,.col-sm-4,.col-sm-5,.col-sm-6,.col-sm-7,.col-sm-8,.col-sm-9,.col-sm-10,.col-sm-11, .dropdown-menu, .nav-tabs > li, .nav-pills > li, .navbar-brand, .navbar-nav, .navbar-nav > li, .pager .previous > a, .pager .previous > span, .progress-bar, .pagination > li > a, .pagination > li > span, .radio input[type="radio"],.radio-inline input[type="radio"], .checkbox input[type="checkbox"],.checkbox-inline input[type="checkbox"],.fl{float: @right;} 
 	.pagination > li > a,.pagination > li > span{margin-left: 0;margin-right: -1px;}
 	 .pagination > li:first-child > a,.pagination > li:first-child > span {	margin-right:0;	}
  .radio input[type="radio"],.radio-inline input[type="radio"],.checkbox input[type="checkbox"],.checkbox-inline input[type="checkbox"] { margin-left: 0; margin-right: -20px;}
