--- a/css/style.css
+++ b/css/style.css
@@ -194,6 +194,7 @@ ______________________*/
   text-align: center;
   padding: 14px 20px 10px;
 }
+#nav a:focus,
 #nav a:hover {
   text-decoration: none;
   background: #000;
@@ -971,6 +972,39 @@ ______________________*/
 #header .social-bar a span,
 #footer .social-bar a span {
   line-height: 32px;
+}
+/**********************
+	 SignUp/Login
+ **********************/
+.model-wrap {
+  max-width: 600px;
+  margin: 15px auto;
+  background: white;
+  border: 5px solid #327cba;
+  border-radius: 15px;
+}
+.model-wrap .form-control:focus {
+  border-color: #327cba;
+  box-shadow: 0 1px 1px rgba(0, 0, 0, 0.075) inset, 0 0 8px rgba(50, 124, 186, 0.6);
+}
+.model-wrap h3 {
+  margin: 10px 0;
+  color: #327cba;
+  font-weight: 500;
+}
+.modal-header h3 {
+  margin-bottom: 0;
+}
+.modal-body {
+  color: #327cba;
+  padding: 10px 20px 20px;
+}
+.form-control:focus {
+  border-color: #327cba;
+  box-shadow: 0 1px 1px rgba(0, 0, 0, 0.075) inset, 0 0 8px rgba(50, 124, 186, 0.6);
+}
+.rtl .close {
+  float: left;
 }
 .fl {
   float: left;
