--- a/css/style.less
+++ b/css/style.less
@@ -257,6 +257,7 @@ ______________________*/
 		display:block;
 		text-align:center;
 		padding:14px 20px 10px;
+		&:focus,
 		&:hover{
 			text-decoration:none;
 			background: #000;
@@ -904,6 +905,42 @@ ______________________*/
 	}
 }
 
+/**********************
+	 SignUp/Login
+ **********************/
+.model-wrap{
+	max-width:600px;
+	margin:15px auto;
+	background:white;
+	border:5px solid @blue;
+	border-radius: 15px;
+	.form-control:focus{
+		border-color:@blue;
+		box-shadow:	0 1px 1px rgba(0, 0, 0, 0.075) inset, 0 0 8px rgba(50, 124, 186, 0.6);
+	}
+}
+.model-wrap h3{
+	margin:10px 0;
+	color:@blue;
+	font-weight:500;
+}
+.modal-header h3{
+	margin-bottom: 0;
+}
+.modal-body{
+	color:@blue;
+	padding:10px 20px 20px;
+}
+.form-control:focus{
+	border-color:@blue;
+	box-shadow:	0 1px 1px rgba(0, 0, 0, 0.075) inset, 0 0 8px rgba(50, 124, 186, 0.6);
+}
+
+.rtl .close{
+	float:left;
+}
+
+
 .fl{ float:left}
 .fr{ float:right}
 .cl{ clear:both; font-size:0; height:0; }
@@ -1001,6 +1038,7 @@ ______________________*/
 	a{
 		padding:10px;
 	}
+	
 }
 .btn-white{
 	margin: 13px 5px;
