--- a/css/rtl.css
+++ b/css/rtl.css
@@ -272,6 +272,10 @@
 }
 .rtl .caret-list {
   padding: 0 15px 0 0;
+  list-style: url("../images/caret-right-rtl.png");
+}
+.rtl .caret-list.gray {
+  list-style: url(../images/caret-right-gray-rtl.png);
 }
 .rtl .author-quotes {
   padding-left: 0;
