--- a/css/rtl.less
+++ b/css/rtl.less
@@ -224,6 +224,10 @@
 }
 .caret-list{
 	padding:0 15px 0 0;
+	list-style:url("../images/caret-right-rtl.png");
+	&.gray{
+		list-style:url(../images/caret-right-gray-rtl.png);
+	}
 }
 .author-quotes{
 	padding-left:0;
